--- a/themes/bootstrap/templates/admin/order/add-shipment-label.twig
+++ b/themes/bootstrap/templates/admin/order/add-shipment-label.twig
@@ -1,6 +1,6 @@
 {# @var shipmentCarrierTypes array #}
 {# @var shipmentRates \inklabs\kommerce\EntityDTO\ShipmentRateDTO[] #}
-{% extends 'layout/base-admin.twig' %}
+{% extends '@theme/layout/base-admin.twig' %}
 
 {% block pageTitle %}Purchase Shipping Label - Order #{{ order.referenceNumber }}{% endblock %}
 
