--- a/themes/bootstrap/templates/admin/order/order-header.twig
+++ b/themes/bootstrap/templates/admin/order/order-header.twig
@@ -1,2 +1,2 @@
-{% include 'admin/order/actions.twig' %}
-{% include 'admin/order/navigation.twig' %}
+{% include '@theme/admin/order/actions.twig' %}
+{% include '@theme/admin/order/navigation.twig' %}
