--- a/themes/bootstrap/templates/admin/setting/index.twig
+++ b/themes/bootstrap/templates/admin/setting/index.twig
@@ -1,6 +1,6 @@
 {# @var products \inklabs\kommerce\EntityDTO\ProductDTO[] #}
 {# @var pagination \inklabs\kommerce\EntityDTO\PaginationDTO #}
-{% extends 'layout/base-admin.twig' %}
+{% extends '@theme/layout/base-admin.twig' %}
 
 {% block pageTitle %}Settings{% endblock %}
 
