--- a/themes/bootstrap/templates/admin/tag/options.twig
+++ b/themes/bootstrap/templates/admin/tag/options.twig
@@ -1,16 +1,16 @@
 {# @var tag \inklabs\kommerce\EntityDTO\TagDTO #}
-{% extends 'layout/base-admin.twig' %}
+{% extends '@theme/layout/base-admin.twig' %}
 
 {% block pageTitle %}Tag Options - {{ tag.name }}{% endblock %}
 
 {% block content %}
     <div class="container">
 
-        {% include 'admin/tag/parts/header.twig' %}
+        {% include '@theme/admin/tag/parts/header.twig' %}
 
         <div class="row">
             <div class="col-sm-12">
-                {% include 'admin/tag/parts/option-list.twig' with {'options': tag.options, 'tag': tag} only %}
+                {% include '@theme/admin/tag/parts/option-list.twig' with {'options': tag.options, 'tag': tag} only %}
 
                 <h4>Add Option:</h4>
                 <form action="{{ routeUrl('admin.tag.add-option') }}"
@@ -32,7 +32,7 @@
 
                 <hr>
 
-                {% include 'admin/tag/parts/text-option-list.twig' with {'textOptions': tag.textOptions} only %}
+                {% include '@theme/admin/tag/parts/text-option-list.twig' with {'textOptions': tag.textOptions} only %}
             </div>
         </div>
     </div>
