--- a/themes/bootstrap/templates/cart/estimate-shipping.twig
+++ b/themes/bootstrap/templates/cart/estimate-shipping.twig
@@ -1,7 +1,7 @@
 {# @var shipmentRates \inklabs\kommerce\EntityDTO\ShipmentRateDTO[] #}
 {# @var shipping array #}
 
-{% extends 'layout/base.twig' %}
+{% extends '@theme/layout/base.twig' %}
 
 {% block pageTitle %}Estimate Shipping{% endblock %}
 
