--- a/themes/bootstrap/templates/cart/parts/totals.twig
+++ b/themes/bootstrap/templates/cart/parts/totals.twig
@@ -12,7 +12,7 @@
                 Shipping:
 
                 <div class="pull-right">
-                    {% embed 'cart/parts/modify-shipping-button.twig' %}{% endembed %}
+                    {% embed '@theme/cart/parts/modify-shipping-button.twig' %}{% endembed %}
                 </div>
             </td>
         </tr>
