--- a/themes/bootstrap/templates/home/index.twig
+++ b/themes/bootstrap/templates/home/index.twig
@@ -1,16 +1,16 @@
-{% extends 'layout/base.twig' %}
+{% extends '@theme/layout/base.twig' %}
 
 {% block pageTitle %}Welcome{% endblock %}
 
 {% block content %}
-    {% embed 'helper/sitelinks-search.twig' only %}{% endembed %}
+    {% embed '@theme/helper/sitelinks-search.twig' only %}{% endembed %}
 
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
                 <h1>Welcome</h1>
 
-                {% embed 'helper/recommended-products.twig' with {'products': recommendedProducts } only %}
+                {% embed '@theme/helper/recommended-products.twig' with {'products': recommendedProducts } only %}
                     {% block title %}Recommended for you{% endblock %}
                 {% endembed %}
             </div>
