--- a/themes/bootstrap/templates/layout/parts/header.twig
+++ b/themes/bootstrap/templates/layout/parts/header.twig
@@ -35,7 +35,7 @@
                 </ul>
 
                 <div class="col-sm-3 navbar-right">
-                    {% embed 'helper/site-search.twig' only %}{% endembed %}
+                    {% embed '@theme/helper/site-search.twig' only %}{% endembed %}
                 </div>
             </div>
         </div>
