--- a/themes/bootstrap/templates/user/account.twig
+++ b/themes/bootstrap/templates/user/account.twig
@@ -1,6 +1,6 @@
 {# @var user \inklabs\kommerce\EntityDTO\UserDTO #}
 {# @var orders \inklabs\kommerce\EntityDTO\OrderDTO[] #}
-{% extends 'layout/base.twig' %}
+{% extends '@theme/layout/base.twig' %}
 
 {% block pageTitle %}User Account - {{ user.fullName }}{% endblock %}
 
