--- a/themes/foundation/templates/layout/base.twig
+++ b/themes/foundation/templates/layout/base.twig
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {% include 'layout/base/head.twig' %}
+    {% include '@theme/layout/base/head.twig' %}
 </head>
 <body id="kc-foundation">
 
     <header id="kc-topbar">
-        {% include 'layout/base/topbar.twig' %}
+        {% include '@theme/layout/base/topbar.twig' %}
     </header>
 
     <main id="kc-container">
@@ -16,7 +16,7 @@
         </section>
 
         <footer id="kc-footer">
-            {% include 'layout/base/footer.twig' %}
+            {% include '@theme/layout/base/footer.twig' %}
         </footer>
     </main>
 
