--- a/themes/bootstrap/templates/admin/order/add-shipment-tracking.twig
+++ b/themes/bootstrap/templates/admin/order/add-shipment-tracking.twig
@@ -1,5 +1,5 @@
 {# @var shipmentCarrierTypes array #}
-{% extends 'layout/base-admin.twig' %}
+{% extends '@theme/layout/base-admin.twig' %}
 
 {% block pageTitle %}Add Shipment with Tracking Code - Order #{{ order.referenceNumber }}{% endblock %}
 
