--- a/themes/bootstrap/templates/admin/product/index.twig
+++ b/themes/bootstrap/templates/admin/product/index.twig
@@ -1,7 +1,7 @@
 {# @var products \inklabs\kommerce\EntityDTO\ProductDTO[] #}
 {# @var pagination \inklabs\kommerce\EntityDTO\PaginationDTO #}
 {# @var queryString string #}
-{% extends 'layout/base-admin.twig' %}
+{% extends '@theme/layout/base-admin.twig' %}
 
 {% block pageTitle %}Products{% endblock %}
 
@@ -20,11 +20,11 @@
                 <form action="{{ routeUrl('admin.product') }}"
                       method="get"
                       class="form-search">
-                    {% embed 'helper/search-bar.twig' with {'placeholder': 'Search SKU/Name', 'queryString': queryString} only %}{% endembed %}
+                    {% embed '@theme/helper/search-bar.twig' with {'placeholder': 'Search SKU/Name', 'queryString': queryString} only %}{% endembed %}
                 </form>
 
                 {{ paginate.detailed(pagination) }}
-                {% include 'admin/product/parts/product-list.twig' with {'products': products} only %}
+                {% include '@theme/admin/product/parts/product-list.twig' with {'products': products} only %}
                 {{ paginate.detailed(pagination) }}
             </div>
         </div>
