--- a/themes/bootstrap/templates/admin/product/parts/header.twig
+++ b/themes/bootstrap/templates/admin/product/parts/header.twig
@@ -1,2 +1,2 @@
-{% include 'admin/product/parts/actions.twig' %}
-{% include 'admin/product/parts/navigation.twig' %}
+{% include '@theme/admin/product/parts/actions.twig' %}
+{% include '@theme/admin/product/parts/navigation.twig' %}
