--- a/themes/bootstrap/templates/admin/product/quantity-discounts.twig
+++ b/themes/bootstrap/templates/admin/product/quantity-discounts.twig
@@ -1,12 +1,12 @@
 {# @var product \inklabs\kommerce\EntityDTO\ProductDTO #}
-{% extends 'layout/base-admin.twig' %}
+{% extends '@theme/layout/base-admin.twig' %}
 
 {% block pageTitle %}Product Quantity Discounts - {{ product.name }}{% endblock %}
 
 {% block content %}
     <div class="container">
 
-        {% include 'admin/product/parts/header.twig' %}
+        {% include '@theme/admin/product/parts/header.twig' %}
 
         <div class="row">
             <div class="col-sm-12">
