--- a/themes/bootstrap/templates/admin/tag/images.twig
+++ b/themes/bootstrap/templates/admin/tag/images.twig
@@ -1,12 +1,12 @@
 {# @var tag \inklabs\kommerce\EntityDTO\TagDTO #}
-{% extends 'layout/base-admin.twig' %}
+{% extends '@theme/layout/base-admin.twig' %}
 
 {% block pageTitle %}Tag Images - {{ tag.name }}{% endblock %}
 
 {% block content %}
     <div class="container">
 
-        {% include 'admin/tag/parts/header.twig' %}
+        {% include '@theme/admin/tag/parts/header.twig' %}
 
         <div class="row">
             <div class="col-sm-12">
@@ -20,7 +20,7 @@
                             </div>
                             <br />
                             <p>
-                                {% include 'admin/tag/parts/set-default-image.twig' %}
+                                {% include '@theme/admin/tag/parts/set-default-image.twig' %}
 
                                 <br>
                                 <form action="{{ routeUrl('admin.tag.remove-image') }}"
