--- a/themes/bootstrap/templates/admin/tag/parts/navigation.twig
+++ b/themes/bootstrap/templates/admin/tag/parts/navigation.twig
@@ -21,6 +21,6 @@
 
 <div class="row">
     <div class="col-sm-12">
-        {% include 'helper/tab-navigation.twig' with {'navigation': navigation} %}
+        {% include '@theme/helper/tab-navigation.twig' with {'navigation': navigation} %}
     </div>
 </div>
