--- a/themes/bootstrap/templates/admin/tag/products.twig
+++ b/themes/bootstrap/templates/admin/tag/products.twig
@@ -1,18 +1,18 @@
 {# @var tag \inklabs\kommerce\EntityDTO\TagDTO #}
-{% extends 'layout/base-admin.twig' %}
+{% extends '@theme/layout/base-admin.twig' %}
 
 {% block pageTitle %}Tag Products - {{ tag.name }}{% endblock %}
 
 {% block content %}
     <div class="container">
 
-        {% include 'admin/tag/parts/header.twig' %}
+        {% include '@theme/admin/tag/parts/header.twig' %}
 
         <div class="row">
             <div class="col-sm-12">
                 <br>
 
-                {% embed 'admin/product/parts/product-list.twig' with {'products': tag.products} %}
+                {% embed '@theme/admin/product/parts/product-list.twig' with {'products': tag.products} %}
                     {% block thead %}
                         <th>Actions</th>
                     {% endblock %}
