--- a/themes/bootstrap/templates/cart/show.twig
+++ b/themes/bootstrap/templates/cart/show.twig
@@ -1,6 +1,6 @@
 {# @var cart \inklabs\kommerce\EntityDTO\CartDTO #}
 {# @var recommendedProducts \inklabs\kommerce\EntityDTO\ProductDTO[] #}
-{% extends 'layout/base.twig' %}
+{% extends '@theme/layout/base.twig' %}
 
 {% block pageTitle %}Shopping Cart{% endblock %}
 
@@ -10,7 +10,7 @@
             {% if cart.cartItems is empty %}
                 <div class="row">
                     <div class="col-sm-12">
-                        {% include 'cart/parts/empty-cart.twig' %}
+                        {% include '@theme/cart/parts/empty-cart.twig' %}
                     </div>
                 </div>
             {% else %}
@@ -45,7 +45,7 @@
                                                     <small>{{ cartItem.fullSku }}</small>
                                                 </div>
 
-                                                {% embed 'cart/parts/cart-item-options.twig' with {'cartItem': cartItem } only %}{% endembed %}
+                                                {% embed '@theme/cart/parts/cart-item-options.twig' with {'cartItem': cartItem } only %}{% endembed %}
                                             </td>
                                             <td class="text-right">
                                                 <form action="{{ routeUrl('cart.update-quantity') }}" method="post" role="form">
@@ -73,11 +73,11 @@
                                                     </span>
                                                 </form>
                                                 <div class="visible-xs">
-                                                    {% embed 'helper/unit-price.twig' with {'price': cartItem.price } only %}{% endembed %}
+                                                    {% embed '@theme/helper/unit-price.twig' with {'price': cartItem.price } only %}{% endembed %}
                                                 </div>
                                             </td>
                                             <td class="text-right hidden-xs">
-                                                {% embed 'helper/unit-price.twig' with {'price': cartItem.price } only %}{% endembed %}
+                                                {% embed '@theme/helper/unit-price.twig' with {'price': cartItem.price } only %}{% endembed %}
                                             </td>
                                             <td class="text-right">
                                                 {{ cartItem.price.quantityPrice | displayPrice }}
@@ -90,7 +90,7 @@
                         </div>
                         <div class="row">
                             <div class="col-sm-7 col-sm-offset-5">
-                                {% embed 'cart/parts/totals.twig' %}{% endembed %}
+                                {% embed '@theme/cart/parts/totals.twig' %}{% endembed %}
                             </div>
                         </div>
                     </div>
@@ -101,10 +101,10 @@
                                 <span class="price-small">{{ cart.cartTotal.total | displayPrice }}</span>
                             </strong>
                             <br /><br />
-                            {% embed 'helper/checkout-button.twig' only %}{% endembed %}
+                            {% embed '@theme/helper/checkout-button.twig' only %}{% endembed %}
                         </div>
                         {% if cart.shipmentRate.rate is not null %}
-                            {% embed 'cart/parts/modify-shipping-button.twig' with {'extraClass': 'btn-block'} %}{% endembed %}
+                            {% embed '@theme/cart/parts/modify-shipping-button.twig' with {'extraClass': 'btn-block'} %}{% endembed %}
                         {% endif %}
 
                         <br>
@@ -122,7 +122,7 @@
                 </div>
             {% endif %}
 
-            {% embed 'helper/recommended-products.twig' with {'products': recommendedProducts, 'size': 'small' } only %}
+            {% embed '@theme/helper/recommended-products.twig' with {'products': recommendedProducts, 'size': 'small' } only %}
             {% endembed %}
         </div>
     </div>
