--- a/themes/bootstrap/templates/checkout/pay.twig
+++ b/themes/bootstrap/templates/checkout/pay.twig
@@ -7,7 +7,7 @@
 {# @var array $creditCard #}
 {# @var array $states #}
 
-{% extends 'layout/base-checkout.twig' %}
+{% extends '@theme/layout/base-checkout.twig' %}
 
 {% block pageTitle %}Checkout{% endblock %}
 
@@ -43,7 +43,7 @@
 
                                     <div class="cart-unit-price">
                                         <span class="hidden-sm">Unit Price:</span>
-                                        {% embed 'helper/unit-price.twig' with {'price': cartItem.price } only %}{% endembed %}
+                                        {% embed '@theme/helper/unit-price.twig' with {'price': cartItem.price } only %}{% endembed %}
                                     </div>
 
                                     <div class="cart-qty">
@@ -108,7 +108,7 @@
                         </tbody>
                     </table>
                     <div id="totals_container">
-                        {% embed 'cart/parts/totals.twig' %}{% endembed %}
+                        {% embed '@theme/cart/parts/totals.twig' %}{% endembed %}
                     </div>
                     {% if cart.shipmentRate.deliveryMethod is not null %}
                         {# TODO:
@@ -350,7 +350,7 @@
                             <i class="fa fa-lock"></i> Place your order
                         </button>
                         <div class="pull-right">
-                            {% embed 'helper/secure-logos.twig' only %}{% endembed %}
+                            {% embed '@theme/helper/secure-logos.twig' only %}{% endembed %}
                         </div>
                     </form>
                 </div>
