--- a/themes/bootstrap/templates/layout/admin-parts/head.twig
+++ b/themes/bootstrap/templates/layout/admin-parts/head.twig
@@ -1,2 +1,2 @@
-{% include 'layout/parts/head.twig' %}
+{% include '@theme/layout/parts/head.twig' %}
 <link rel="stylesheet" href="{{ routeUrl('style.serve') }}?p=main-admin.scss&formatter=compact">
