--- a/themes/bootstrap/templates/product/show.twig
+++ b/themes/bootstrap/templates/product/show.twig
@@ -1,6 +1,6 @@
 {# @var product \inklabs\kommerce\EntityDTO\ProductDTO #}
 {# @var relatedProducts \inklabs\kommerce\EntityDTO\ProductDTO[] #}
-{% extends 'layout/base.twig' %}
+{% extends '@theme/layout/base.twig' %}
 
 {% block pageTitle %}{{ product.name }}{% endblock %}
 {% block pageDescription %}{{ product.description | nl2br }}{% endblock %}
@@ -35,7 +35,7 @@
                             <div class="divider"></div>
 
                             <div class="review-actions">
-                                {% embed 'helper/rating-stars.twig' with {'rating': product.rating } only %}{% endembed %}
+                                {% embed '@theme/helper/rating-stars.twig' with {'rating': product.rating } only %}{% endembed %}
 
                                 {# TODO: Render Reviews #}
                             </div>
@@ -64,7 +64,7 @@
                             </div>
                         {% endif %}
 
-                        {% embed 'helper/price.twig' with {'price': product.price } only %}{% endembed %}
+                        {% embed '@theme/helper/price.twig' with {'price': product.price } only %}{% endembed %}
                         <br />
 
                         {% if product.productQuantityDiscounts is not empty %}
@@ -102,7 +102,7 @@
                                     <div class="row">
                                         <div class="col-sm-12">
                                             <div class="control-group">
-                                                {% embed 'product/parts/options.twig' with {'option': option } only %}
+                                                {% embed '@theme/product/parts/options.twig' with {'option': option } only %}
                                                 {% endembed %}
                                             </div>
                                         </div>
@@ -113,7 +113,7 @@
                                     <div class="row">
                                         <div class="col-sm-12">
                                             <div class="control-group">
-                                                {% embed 'product/parts/text-options.twig' with {'textOption': textOption } only %}
+                                                {% embed '@theme/product/parts/text-options.twig' with {'textOption': textOption } only %}
                                                 {% endembed %}
                                             </div>
                                         </div>
@@ -190,7 +190,7 @@
                 {% if relatedProducts is not empty %}
                     <h2 class="text-center">You Might Also Like</h2>
 
-                    {% embed 'helper/product-grid-small.twig' with {'products': relatedProducts, 'lg_slim': true } only %}
+                    {% embed '@theme/helper/product-grid-small.twig' with {'products': relatedProducts, 'lg_slim': true } only %}
                     {% endembed %}
 
                 {% endif %}
