--- a/themes/bootstrap/templates/tag/show.twig
+++ b/themes/bootstrap/templates/tag/show.twig
@@ -1,7 +1,7 @@
 {# @var tag \inklabs\kommerce\EntityDTO\TagDTO #}
 {# @var products \inklabs\kommerce\EntityDTO\ProductDTO[] #}
 {# @var pagination \inklabs\kommerce\EntityDTO\PaginationDTO #}
-{% extends 'layout/base.twig' %}
+{% extends '@theme/layout/base.twig' %}
 
 {% block pageTitle %}{{ tag.name }}{% endblock %}
 {% block pageDescription %}{{ tag.description | nl2br }}{% endblock %}
@@ -33,7 +33,7 @@
                 {% else %}
                     {{ paginate.detailed(pagination) }}
 
-                    {% embed 'helper/product-grid.twig' with {'products': products } only %}
+                    {% embed '@theme/helper/product-grid.twig' with {'products': products } only %}
                     {% endembed %}
 
                     <div class="clearfix"></div>
@@ -42,7 +42,7 @@
             </div>
         </div>
 
-        {% embed 'helper/recommended-products.twig' with {
+        {% embed '@theme/helper/recommended-products.twig' with {
             'products': recommendedProducts,
             'size': 'small'
         } only %}
