--- a/themes/foundation/templates/helper/product_grid.twig
+++ b/themes/foundation/templates/helper/product_grid.twig
@@ -9,12 +9,12 @@
     </a>
     <a href="{{ productUrl(product) }}">{{ productUrl(product) }}</a>
 
-    {% embed "helper/rating-stars.twig" with {'rating': product.rating } only %}{% endembed %}
+    {% embed '@theme/helper/rating-stars.twig' with {'rating': product.rating } only %}{% endembed %}
 
     {% if product.isInStock %}
         Out of Stock
     {% elseif product.isPriceVisible %}
-        {% embed "helper/price.twig" with {'price': product.price } only %}{% endembed %}
+        {% embed '@theme/helper/price.twig' with {'price': product.price } only %}{% endembed %}
     {% endif %}
 
 {% endfor %}
